test_regress/t/t_constraint_unsup.out
%Error-UNSUPPORTED: t/t_constraint_unsup.v:9:29: Unsupported expression inside constraint
                                               : ... note: In instance 't'
    9 |   constraint cons { x + 1.0 > 0.0; }
      |                             ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
